fixed spacing in image box

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -304,8 +304,15 @@ html, body {
 }
 
 .back4 {
-left: 1000px;
-}
+    width: 261px;
+    height: 391px;
+    left: 700px;
+    top: 0px;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 2px 4px rgba(7, 22, 41, 0,18);
+    border-radius: 5px;
+
 
 .PhillipMassey {
     color: #C271FF;
